--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,16 +29,12 @@ jobs:
       uses: actions/upload-artifact@v2.2.4
       with:
         # Artifact name
-        name: # optional, default is artifact
+        name: akg-java-test1
         # A file, directory or wildcard pattern that describes what to upload
         path: 
         # The desired behavior if no files are found using the provided path.
-        
-      if-no-files-found: # optional, default is warn
-        # Duration after which artifact will expire in days. 0 means using default retention.
-        # Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-      retention-days: # optional
+        if-no-files-found: error
+        retention-days: 60
       
       
       
